--- a/GameData/Kerbojet/Parts/Cockpit_HL_Supersonic/Cockpit_HL_Supersonic.cfg
+++ b/GameData/Kerbojet/Parts/Cockpit_HL_Supersonic/Cockpit_HL_Supersonic.cfg
@@ -1,47 +1,41 @@
 PART
 {
-	// --- general parameters ---
 	name = Kerbojet_Cockpit_HL_Supersonic
-	module = CommandPod
+	module = Part
 	author = blowfish
 
-	// --- asset parameters ---
 	MODEL
 	{
 		model = Kerbojet/Parts/Cockpit_HL_Supersonic/Cockpit_HL_Supersonic
 	}
 	scale = 1
 	rescaleFactor = 1
-
-	// --- node definitions ---
-	// definition format is Position X, Position Y, Position Z, Up X, Up Y, Up Z
-	node_stack_bottom = 0.0, -2.5, 0, 0.0, 1.0, 0.0, 3
-
-	// --- FX definitions ---
-
-	// --- editor parameters ---
+	
+	node_stack_bottom = 0.0, -2.5, 0, 0.0, -1.0, 0.0, 3 // position x,y,z, normal x,y,z, size
+	
 	TechRequired = heavyAerodynamics
-	entryCost = 14400
-	cost = 7200
+	entryCost = 80000
+	cost = 16000
 	category = Pods
 	subcategory = 0
 	title = HL Supersonic Cockpit
 	manufacturer = Kerbojet Systems
 	description = Placeholder.
-	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
-	attachRules = 1,0,1,1,0
-
-	// --- standard part parameters ---
-	mass = 9
+	attachRules = 1,0,1,1,0  // stack, srfAttach, allowStack, allowSrfAttach, allowCollision
+	bulkheadProfiles = mk3
+	
+	mass = 10.0
 	dragModelType = default
-	maximum_drag = 0.2
-	minimum_drag = 0.15
-	angularDrag = 2
-	crashTolerance = 45
-	breakingForce = 400
-	breakingTorque = 400
-	maxTemp = 3400
-
+	maximum_drag = 0
+	minimum_drag = 0
+	angularDrag = 0
+	crashTolerance = 60
+	breakingForce = 500
+	breakingTorque = 500
+	maxTemp = 2700
+	emissiveConstant = 0.9
+	fuelCrossFeed = True
+	bulkheadProfiles = mk3
 	stagingIcon = COMMAND_POD
 	vesselType = Ship
 
@@ -61,14 +55,14 @@ PART
 	RESOURCE
 	{
 		name = ElectricCharge
-		amount = 800
-		maxAmount = 800
+		amount = 1000
+		maxAmount = 1000
 	}
 	RESOURCE
 	{
 		name = MonoPropellant
-		amount = 80
-		maxAmount = 80
+		amount = 120
+		maxAmount = 120
 	}
 
 	MODULE
@@ -93,9 +87,9 @@ PART
 	{
 		name = ModuleReactionWheel
 
-		PitchTorque = 32.0
-		YawTorque = 32.0
-		RollTorque = 32.0
+		PitchTorque = 80.0
+		YawTorque = 80.0
+		RollTorque = 40.0
 
 		RESOURCE
 		{
@@ -117,6 +111,8 @@ PART
 		hideUIwhenUnavailable = True
 		rerunnable = True
 		xmitDataScalar = 1.0
+		usageReqMaskInternal = 5
+		usageReqMaskExternal = -1
 	}
 
 	MODULE
@@ -125,18 +121,11 @@ PART
 		reviewActionName = Review Stored Data
 		storeActionName = Store Experiments
 		evaOnlyStorage = True
-		storageRange = 2.0
+		storageRange = 4.0
 	}
 
 	MODULE
 	{
 		name = RasterPropMonitorComputer
 	}
-}
-
-@PART[Kerbojet_Cockpit_HL_Supersonic]:NEEDS[FerramAerospaceResearch|NEAR]:Final
-{
-	@minimum_drag = 0
-	@maximum_drag = 0
-	@angularDrag = 0
 }
