--- a/GameData/Kerbojet/Parts/HL_Tail_12m/HL_Tail_12m.cfg
+++ b/GameData/Kerbojet/Parts/HL_Tail_12m/HL_Tail_12m.cfg
@@ -15,16 +15,16 @@ PART
 
     // --- node definitions ---
     // definition format is Position X, Position Y, Position Z, Up X, Up Y, Up Z
-    node_stack_top = 0, 4, 0, 0, -1, 0, 3
+    node_stack_top = 0, 4, 0, 0, 1, 0, 3
     node_attach    = 0, 4, 0, 0, 1, 0
 
     // --- FX definitions ---
 
     // --- editor parameters ---
     TechRequired = heavyAerodynamics
-    entryCost = 13500
-    cost = 6165
-    category = Structural
+    entryCost = 60000
+    cost = 4000
+    category = FuelTank
     subcategory = 0
     title = HL 12m Universal Tail
     manufacturer = Kerbojet Systems
@@ -34,16 +34,18 @@ PART
     attachRules = 1,1,1,1,0
 
     // --- standard part parameters ---
-    mass = 6.2 // 70.35 m^2
+    mass = 6.2 // 70.35 m^3
     dragModelType = default
-    maximum_drag = 0.2
-    minimum_drag = 0.15
-    angularDrag = 2
+    maximum_drag = 0
+    minimum_drag = 0
+    angularDrag = 0
     crashTolerance = 30
-    maxTemp = 3400
+    maxTemp = 2600
+	emissiveConstant = 0.9
+    breakingForce = 500
+    breakingTorque = 500
+	bulkheadProfiles = srf, mk3
     fuelCrossFeed = True
-    breakingForce = 2762
-    breakingTorque = 2762
 	
 	MODULE
     {
@@ -64,11 +66,4 @@ PART
 		tankCost = 0;12000;9000
 		displayCurrentTankCost = true
 	}
-}
-
-@PART[Kerbojet_Tail_HL_12m]:NEEDS[FerramAerospaceResearch|NEAR]:Final
-{
-    @minimum_drag = 0
-    @maximum_drag = 0
-    @angularDrag = 0
 }
